# mcts-chomp

./: .gitignore  CMakeLists.txt
include/: chomp.hpp  players.hpp
src/: chomp.cpp  main.cpp  players.cpp
